addeed register login forgot password

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studentlearndailyregister.css
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studentlearndailyregister.css
@@ -61,3 +61,13 @@
 .student-login-redirect {
      text-align:center;
 }
+
+.error-message {
+    color: red;
+    font-size: 0.875em;
+    margin-top: 0.25em;
+}
+
+.form-group {
+    margin-bottom: 1em;
+}
