--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentregloginresetnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentregloginresetnav.html
@@ -60,8 +60,8 @@
   
   
     <div class="student-reg-log-icon">
-          <h6><a href="#">Register</a></h6>
-          <h6><a href="#">Log in</a></h6>
+          <h6><a href="{% url "Student_Register" %}">Register</a></h6>
+          <h6><a href="{% url "studentlogin" %}">Log in</a></h6>
           <h5> Welcome <b><i>Student</i></b></h5>
           <p><i class="fa-solid fa-user-graduate student-profile"></i></p>
     </div>
