--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentlearndailyregister.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentlearndailyregister.html
@@ -8,36 +8,81 @@
 {% endblock css%}
 
 {% block content %}
-
 <section class="student-registration-section">
     <h2 class="student-registration-heading">Registration</h2>
-   <div class="student-registration-form">
-    <form>
-        <h3 class="student-registration-form-heading">Register from here</h3>
-        <label for="fname">First Name:</label>
-<input type="text" id="fname" class="registration-fname" placeholder="First Name" required>
-
-       <label for="lname">Last Name:</label>
-<input type="text" id="lname" class="registration-lname" placeholder="Last Name" required>
-
-      
-        <label for="email">Email Id:</label>
-        <input type="email" id="email" class="registration-email-input" placeholder="Email Id" required>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" class="registration-password-input" placeholder="Password" required>
-        
-        <label for="confirm-password">Confirm Password:</label>
-        <input type="password" id="confirm-password" class="registration-confirm-password-input" placeholder="Confirm Password" required>
-        
-        <label for="otp">OTP:</label>
-        <input type="text" id="otp" class="registration-otp" placeholder="Registration OTP" required>
-        
-        <input type="submit" value="Register" class="registration-submit-button">
-    </form>
-     <p class="student-login-redirect">Already have an account? <a href="#">Log in</a> </p>
-     </div>
+    <div class="student-registration-form">
+        <form method="post">
+            {% csrf_token %}
+            <h3 class="student-registration-form-heading">Register from here</h3>
+            {% if form.non_field_errors %}
+                <div class="error">
+                    {% for error in form.non_field_errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            <div class="form-group">
+                {{ form.first_name.label_tag }}
+                {{ form.first_name }}
+                {% if form.first_name.errors %}
+                    <div class="error">
+                        {% for error in form.first_name.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.last_name.label_tag }}
+                {{ form.last_name }}
+                {% if form.last_name.errors %}
+                    <div class="error">
+                        {% for error in form.last_name.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+                {% if form.email.errors %}
+                    <div class="error">
+                        {% for error in form.email.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.password.label_tag }}
+                {{ form.password }}
+                {% if form.password.errors %}
+                    <div class="error">
+                        {% for error in form.password.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.confirm_password.label_tag }}
+                {{ form.confirm_password }}
+                {% if form.confirm_password.errors %}
+                    <div class="error">
+                        {% for error in form.confirm_password.errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <input type="submit" value="Register" class="registration-submit-button">
+        </form>
+        <p class="student-login-redirect">Already have an account? <a href="{% url "studentlogin" %}">Log in</a></p>
+    </div>
 </section>
-
-
 {% endblock %}
+
+
+
+
