--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studenthomework.css
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studenthomework.css
@@ -271,6 +271,43 @@
     }
 }
 
+.alert {
+    display: block;
+    padding: 1rem;
+    margin-bottom: 1.25rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.alert.success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.alert.error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.alert.info {
+    color: #0c5460;
+    background-color: #d1ecf1;
+    border-color: #bee5eb;
+}
+
+.alert.warning {
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
+}
+
+
+
 /* Styles for screens between 800px and 1140px */
 @media only screen and (min-width: 850px) and (max-width: 1140px) {
     .add-form {
