--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -11,7 +11,7 @@
     <div class="student-icon-logo">
         <h1 class="SLD-Menu"><i class="fa-solid fa-bars fa-beat"></i>
           <ul class="student-nav-links-dropdown-SLD-Menu">
-                <li class="student-nav-links-li"><a href="{% url "studenthomework" %}">Homework</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studenthomework" student_id %}">Homework</a></li>
                 <li class="student-nav-links-li"><a href="#">Assignments</a></li>
                 <li class="student-nav-links-li"><a href="#">Daily</a></li>
                 <li class="student-nav-links-li"><a href="#">Monthly</a></li>
@@ -28,7 +28,7 @@
         <h1 class="student-learn-daily-logo">Student Learn Daily</h1>
     </div>
     <ul class="student-nav-links">
-        <li class="student-nav-links-li"><a href="{% url "studenthomework" %}">Homework</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studenthomework" student_id %}">Homework</a></li>
         <li class="student-nav-links-li"><a href="#">Assignments</a></li>
         <li class="student-nav-links-li"><a href="#">Daily</a></li>
         <li class="student-nav-links-li"><a href="#">Monthly</a></li>
@@ -41,7 +41,7 @@
     <div class="dropdown-container">
     <p class="dropdown-trigger">Menu</p>
     <ul class="student-nav-links-dropdown">
-        <li class="student-nav-links-li"><a href="{% url "studenthomework" %}">Homework</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studenthomework" student_id %}">Homework</a></li>
         <li class="student-nav-links-li"><a href="#">Assignments</a></li>
         <li class="student-nav-links-li"><a href="#">Daily</a></li>
         <li class="student-nav-links-li"><a href="#">Monthly</a></li>
@@ -55,7 +55,7 @@
   
     <h4><a href="{% url "studentlogin" %}">Log out</a></h4>
     <div class="student-reg-log-icon">
-          <h5> Welcome <b><i>Student</i></b></h5>
+        <h5> Welcome <b><i> {{ student_name }} </i></b></h5>
           <p><i class="fa-solid fa-user-graduate student-profile"></i></p>
     </div>
 </nav>
