fixed register login reset password nav bar user name

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentlearndailyregister.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentlearndailyregister.html
@@ -78,9 +78,11 @@
             </div>
             <input type="submit" value="Register" class="registration-submit-button">
         </form>
-        <p class="student-login-redirect">Already have an account? <a href="{% url "studentlogin" %}">Log in</a></p>
+        <p class="student-login-redirect">Already have an account? <a href="{% url 'studentlogin' %}">Log in</a></p>
     </div>
 </section>
+
+
 {% endblock %}
 
 
