--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentresetpasswordapp.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentresetpasswordapp.html
@@ -27,7 +27,7 @@
             <label for="{{ form.email.id_for_label }}">Email ID:</label>
             {{ form.email }}
             
-            <label for="{{ form.password.id_for_label }}">Password:</label>
+            <label for="{{ form.password.id_for_label }}">New Password:</label>
             {{ form.password }}
             
             <label for="{{ form.confirm_password.id_for_label }}">Confirm Password:</label>
@@ -38,6 +38,7 @@
         <p class="student-pwd-login-redirect">Password reset? <a href="{% url 'studentlogin' %}">Login</a></p>
     </div>
 </section>
+
 
 
 
