--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studentlearndailyregister.css
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studentlearndailyregister.css
@@ -71,3 +71,17 @@
 .form-group {
     margin-bottom: 1em;
 }
+
+.error {
+    color: #d9534f;
+    background-color: #f2dede;
+    border: 1px solid #d9534f;
+    padding: 10px;
+    margin-top: 5px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.error p {
+    margin: 0;
+}
