--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studenthomework.css
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/static/studenthomework.css
@@ -282,10 +282,11 @@
     box-sizing: border-box;
 }
 
-.alert.success {
-    color: #155724;
-    background-color: #d4edda;
+.success-messages {
+    color: #0de33f;
+    background-color: #4da461;
     border-color: #c3e6cb;
+    list-style: none;
 }
 
 .alert.error {
