--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studenthomework.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studenthomework.html
@@ -7,65 +7,61 @@
 {% endblock css %}
 
 {% block content %}
+
 <section class="Student-Homework-section">
     <h2 class="home-work-heading">Home Work</h2>
-    <!-- Add Homework Form -->
-    <div class="add-hw-form">
-        <form method="post">
+
+    <div class="add-homework-form">
+        <form class="add-form" method="post">
             {% csrf_token %}
             <h3 class="ahw-H">Add Home Work</h3>
             <div class="form-row">
-                <label for="id_subject_name" class="label">Subject Name:</label>
+                <label for="sname" class="label">Subject Name:</label>
                 {{ form.subject_name }}
             </div>
             <div class="form-row">
-                <label for="id_topic_name" class="label">Topic Name:</label>
+                <label for="tname" class="label">Topic Name:</label>
                 {{ form.topic_name }}
             </div>
-            <input type="submit" value="Add Home Work" class="submit-button">
+            <input type="submit" value="Add Home Work" class="submit-button" name="add_homework">
+            {% if add_homework_message %}
+                <ul class="success-messages">
+                    <li class="message">{{ add_homework_message }}</li>
+                </ul>
+            {% endif %}
         </form>
-        {% if messages %}
-        {% for message in messages %}
-            <div class="alert {{ message.tags }}">
-                {{ message }}
-            </div>
-        {% endfor %}
+    </div>
+    
+    <div class="list-of-home-work">
+        <h3>List of Homework to Do Today</h3>
+        {% if todos %}
+            <table class="list-hw-table">
+                <tr>
+                    <th>Subject</th>
+                    <th>Topic</th>
+                    <th>Mark as In Progress</th>
+                    <th>Date Added</th>
+                </tr>
+                {% for homework in todos %}
+                    <tr>
+                        <td>{{ homework.subject_name }}</td>
+                        <td>{{ homework.topic_name }}</td>
+                        <td>
+                            <form method="post" style="display:inline;">
+                                {% csrf_token %}
+                                <input type="hidden" name="homework_id" value="{{ homework.id }}">
+                                <button type="submit" name="mark_in_progress" class="In-Progress-btn">In Progress</button>
+                            </form>
+                        </td>
+                        <td>{{ homework.date|date:"d/m/Y" }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        {% else %}
+            <p>No homework to do yet.</p>
         {% endif %}
     </div>
-
-    <!-- Homework To Do Today -->
-    <div class="list-of-home-work">
-        <h3 class="LHTH">List of Homework to Do Today</h3>
-        <table class="list-hw-table">
-            <tr>
-                <th>Subject</th>
-                <th>Topic</th>
-                <th>Mark as In Progress</th>
-                <th>Date Added</th>
-            </tr>
-            {% for homework in homework_today %}
-            <tr>
-                <td>{{ homework.subject_name }}
-                    <form method="post" style="display:inline;">
-                        {% csrf_token %}
-                        <input type="hidden" name="hw_id" value="{{ homework.id }}">
-                        <button type="submit" name="mark_in_progress" class="edit-btn">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </button>
-                    </form>
-                </td>
-                <td>{{ homework.topic_name }}</td>
-                <td>{{ homework.date }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="4">No homework for today</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-
-    <!-- Homework In Progress -->
+    
     <div class="homework-in-progress">
         <h3 class="HIPH">Homework in Progress</h3>
         <table class="home-work-in-progress-tb">
@@ -75,56 +71,55 @@
                 <th>Mark as Completed</th>
                 <th>Date In Progress</th>
             </tr>
-            {% for homework in homework_in_progress %}
-            <tr>
-                <td>{{ homework.subject_name }}</td>
-                <td>{{ homework.topic_name }}</td>
-                <td>
-                    <form method="post" style="display:inline;">
-                        {% csrf_token %}
-                        <input type="hidden" name="hw_id" value="{{ homework.id }}">
-                        <button type="submit" name="mark_completed" class="Complete-btn">Completed</button>
-                    </form>
-                </td>
-                <td>{{ homework.date }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="4">No homework in progress</td>
-            </tr>
-            {% endfor %}
+            {% if in_progress %}
+                {% for homework in in_progress %}
+                    <tr>
+                        <td>{{ homework.subject_name }}</td>
+                        <td>{{ homework.topic_name }}</td>
+                        <td>
+                            <form method="post" style="display:inline;">
+                                {% csrf_token %}
+                                <input type="hidden" name="homework_id" value="{{ homework.id }}">
+                                <button type="submit" name="mark_completed" class="Complete-btn">Completed</button>
+                            </form>
+                        </td>
+                        <td>{{ homework.date|date:"d/m/Y" }}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <p>No homework in progress.</p>
+            {% endif %}
         </table>
     </div>
-
-    <!-- Search Completed Homework by Date -->
+    
     <div class="search-day-homework">
-        <h3 class="SCHDH">Search Completed Homework by Date</h3>
-        <form method="post">
-            {% csrf_token %}
+        <h3 class="SCHDH"> Search Completed Homework by Date</h3>
+        <form class="SHD-form" method="get">
             <label for="homework-date">Search Homework by Date:</label>
-            <input type="date" id="homework-date" name="search_date" placeholder="Select a date" value="{{ search_date }}" required>
+            <input type="date" id="homework-date" name="homework-date" value="{{ search_date|date:'Y-m-d' }}" required>
             <button type="submit" class="Search-btn">Search</button>
         </form>
-        <h3 class="SCHDH">Completed Homework on {{ search_date }}</h3>
+        <h3 class="SCHDH">Completed Homework on {{ search_date|date:"d/m/Y" }}</h3>
         <table class="particular-day-home-work-tb">
             <tr>
                 <th>Subject</th>
                 <th>Topic</th>
             </tr>
-            {% for homework in completed_homework %}
-            <tr>
-                <td>{{ homework.subject_name }}</td>
-                <td>{{ homework.topic_name }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="2">No completed homework for this date</td>
-            </tr>
-            {% endfor %}
+            {% if completed_homework %}
+                {% for homework in completed_homework %}
+                    <tr>
+                        <td>{{ homework.subject_name }}</td>
+                        <td>{{ homework.topic_name }}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="2">No completed homework for this date.</td>
+                </tr>
+            {% endif %}
         </table>
     </div>
 
-    <!-- All Completed Homework -->
     <div class="completed-homework">
         <h3 class="ACHH">All Completed Homework</h3>
         <table class="ACH-tb">
@@ -133,18 +128,22 @@
                 <th>Topic</th>
                 <th>Completion Date</th>
             </tr>
-            {% for homework in completed_homework_all %}
-            <tr>
-                <td>{{ homework.subject_name }}</td>
-                <td>{{ homework.topic_name }}</td>
-                <td>{{ homework.completion_date }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="3">No completed homework</td>
-            </tr>
-            {% endfor %}
+            {% if all_completed_homework %}
+                {% for homework in all_completed_homework %}
+                    <tr>
+                        <td>{{ homework.subject_name }}</td>
+                        <td>{{ homework.topic_name }}</td>
+                        <td>{{ homework.date|date:"d/m/Y" }}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="3">No completed homework.</td>
+                </tr>
+            {% endif %}
         </table>
     </div>
 </section>
+
+
 {% endblock content %}
