--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginbase.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginbase.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" type="image/jpeg" href="{% static 'StudentLearnDailyfav.jpg' %}">
   <link href="https://fonts.googleapis.com/css2?family=Quiche+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'studentloginbase.css' %}">
+  
   {% block css %}
  
 
@@ -29,7 +31,43 @@
     
     {% include "studentlearndailyfooter.html" %}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script>
+        // Toastr configuration
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": true,  // Change to true for newest messages on top
+            "progressBar": true,
+            "positionClass": "toast-bottom-right",  // Positioning top-right
+            "preventDuplicates": true,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
 
+        // Show Toastr messages
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.tags == "success" %}
+                    toastr.success("{{ message.message }}");
+                {% elif message.tags == "error" %}
+                    toastr.error("{{ message.message }}");
+                {% elif message.tags == "warning" %}
+                    toastr.warning("{{ message.message }}");
+                {% elif message.tags == "info" %}
+                    toastr.info("{{ message.message }}");
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+    </script>
 
 </body>
 </html>
