maonthly page completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -14,7 +14,7 @@
                 <li class="student-nav-links-li"><a href="{% url "studenthomework" student_id %}">Homework</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentasignments" student_id %}">Assignments</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
-                <li class="student-nav-links-li"><a href="#">Monthly</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
                 <li class="student-nav-links-li"><a href="#">Yearly</a></li>
                 <li class="student-nav-links-li"><a href="#">Goals</a></li>
                 <li class="student-nav-links-li"><a href="#">Notes</a></li>
@@ -31,7 +31,7 @@
         <li class="student-nav-links-li"><a href="{% url "studenthomework" student_id %}">Homework</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentasignments" student_id %}">Assignments</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
-        <li class="student-nav-links-li"><a href="#">Monthly</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
         <li class="student-nav-links-li"><a href="#">Yearly</a></li>
         <li class="student-nav-links-li"><a href="#">Goals</a></li>
         <li class="student-nav-links-li"><a href="#">Notes</a></li>
@@ -44,7 +44,7 @@
         <li class="student-nav-links-li"><a href="{% url "studenthomework" student_id %}">Homework</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentasignments" student_id %}">Assignments</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
-        <li class="student-nav-links-li"><a href="#">Monthly</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
         <li class="student-nav-links-li"><a href="#">Yearly</a></li>
         <li class="student-nav-links-li"><a href="#">Goals</a></li>
         <li class="student-nav-links-li"><a href="#">Notes</a></li>
