yearly page completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -15,7 +15,7 @@
                 <li class="student-nav-links-li"><a href="{% url "studentasignments" student_id %}">Assignments</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
-                <li class="student-nav-links-li"><a href="#">Yearly</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
                 <li class="student-nav-links-li"><a href="#">Goals</a></li>
                 <li class="student-nav-links-li"><a href="#">Notes</a></li>
                 <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
@@ -32,7 +32,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentasignments" student_id %}">Assignments</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
-        <li class="student-nav-links-li"><a href="#">Yearly</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
         <li class="student-nav-links-li"><a href="#">Goals</a></li>
         <li class="student-nav-links-li"><a href="#">Notes</a></li>
         <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
@@ -45,7 +45,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentasignments" student_id %}">Assignments</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
-        <li class="student-nav-links-li"><a href="#">Yearly</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
         <li class="student-nav-links-li"><a href="#">Goals</a></li>
         <li class="student-nav-links-li"><a href="#">Notes</a></li>
         <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
