completed goals app and page

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -16,7 +16,7 @@
                 <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
-                <li class="student-nav-links-li"><a href="#">Goals</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
                 <li class="student-nav-links-li"><a href="#">Notes</a></li>
                 <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
                 <li class="student-nav-links-li"><a href="#">Games</a></li>
@@ -33,7 +33,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
-        <li class="student-nav-links-li"><a href="#">Goals</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
         <li class="student-nav-links-li"><a href="#">Notes</a></li>
         <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
         <li class="student-nav-links-li"><a href="#">Games</a></li>
@@ -46,7 +46,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentdailypage" student_id %}">Daily</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
-        <li class="student-nav-links-li"><a href="#">Goals</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
         <li class="student-nav-links-li"><a href="#">Notes</a></li>
         <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
         <li class="student-nav-links-li"><a href="#">Games</a></li>
