notes app added successfully

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -17,7 +17,7 @@
                 <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
-                <li class="student-nav-links-li"><a href="#">Notes</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
                 <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
                 <li class="student-nav-links-li"><a href="#">Games</a></li>
           </ul>
@@ -34,7 +34,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
-        <li class="student-nav-links-li"><a href="#">Notes</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
         <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
         <li class="student-nav-links-li"><a href="#">Games</a></li>
     </ul>
@@ -47,7 +47,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentmonthlypage" student_id %}">Monthly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
-        <li class="student-nav-links-li"><a href="#">Notes</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
         <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
         <li class="student-nav-links-li"><a href="#">Games</a></li>
     </ul>
