collabaration app completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -18,7 +18,7 @@
                 <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
-                <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studentcollabarate" student_id %}">Collaborate</a></li>
                 <li class="student-nav-links-li"><a href="#">Games</a></li>
           </ul>
           </h1>
@@ -35,7 +35,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
-        <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentcollabarate" student_id %}">Collaborate</a></li>
         <li class="student-nav-links-li"><a href="#">Games</a></li>
     </ul>
     <div class="dropdown-container">
@@ -48,7 +48,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentyearlypage" student_id %}">Yearly</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
-        <li class="student-nav-links-li"><a href="#">Collaborate</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentcollabarate" student_id %}">Collaborate</a></li>
         <li class="student-nav-links-li"><a href="#">Games</a></li>
     </ul>
     </div>
