student all games page added

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentloginnav.html
@@ -19,7 +19,7 @@
                 <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
                 <li class="student-nav-links-li"><a href="{% url "studentcollabarate" student_id %}">Collaborate</a></li>
-                <li class="student-nav-links-li"><a href="#">Games</a></li>
+                <li class="student-nav-links-li"><a href="{% url "studentallgames" student_id  %}">Games</a></li>
           </ul>
           </h1>
         <p><i class="fa-solid fa-graduation-cap study-logo"></i></p>
@@ -36,7 +36,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentcollabarate" student_id %}">Collaborate</a></li>
-        <li class="student-nav-links-li"><a href="#">Games</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentallgames" student_id  %}">Games</a></li>
     </ul>
     <div class="dropdown-container">
     <p class="dropdown-trigger">Menu</p>
@@ -49,7 +49,7 @@
         <li class="student-nav-links-li"><a href="{% url "studentgoalspage" student_id %}">Goals</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentnotespage" student_id %}">Notes</a></li>
         <li class="student-nav-links-li"><a href="{% url "studentcollabarate" student_id %}">Collaborate</a></li>
-        <li class="student-nav-links-li"><a href="#">Games</a></li>
+        <li class="student-nav-links-li"><a href="{% url "studentallgames" student_id  %}">Games</a></li>
     </ul>
     </div>
   
