student head tails game app completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
@@ -32,7 +32,7 @@
     </div>
        <div class="coin-toss-guessing-game-grid-4">
          <img src="/static/Leonardo_Phoenix_Gradient_background_light_gray_to_pastel_blue_0.jpg" class="coin-toss-game-img">
-         <a href="#" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
+         <a href="{% url "studentheadortails" student_id %}" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
     </div>
       
       
