number guessing game completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
@@ -18,7 +18,7 @@
     <div class="student-four-games">
     <div class="number-guessing-game-grid-1">
          <img src="/static/Leonardo_Phoenix_Gradient_background_light_gray_to_pastel_blue_2.jpg" alt="Number Guessing Game" class="number-guessing-game-img">
-         <a href="#" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
+         <a href="{% url "studentnumberguessing" student_id %}" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
     </div>
      
     <div class="word-guessing-game-grid-2">
